# Games

./: README.md
cpp/nn-cpp/: LinearLayer.cpp  Sigmoid.cpp  Sigmoid.h
cpp/tic-tac-toe/: CMakeLists.txt
python-pong/: README.md  config.txt  final.pickle  main.py
python-pong/checkpoints/: .directory  neat-checkpoint-0  neat-checkpoint-11  neat-checkpoint-14  neat-checkpoint-16  neat-checkpoint-19  neat-checkpoint-2  neat-checkpoint-21  neat-checkpoint-23  neat-checkpoint-25  neat-checkpoint-3  neat-checkpoint-7  neat-checkpoints-0  neat-checkpoints-1  neat-checkpoints-10  neat-checkpoints-11  neat-checkpoints-12  neat-checkpoints-13  neat-checkpoints-14  neat-checkpoints-15  neat-checkpoints-16  neat-checkpoints-17  neat-checkpoints-18  neat-checkpoints-19  neat-checkpoints-2  neat-checkpoints-20  neat-checkpoints-21  neat-checkpoints-25  neat-checkpoints-3  neat-checkpoints-4  neat-checkpoints-5  neat-checkpoints-6  neat-checkpoints-7  neat-checkpoints-8  neat-checkpoints-9  trained-final-21  trained-final-22  trained-final-23  trained-final-24  trained-final-25  (+26 more)
snake-cpp/: CMakeLists.txt  README.md  main.cpp  snake.cpp  snake.h  standard-header.h
tic-tac-toe-python/: README.md  tic-tac-toe.py
